seton/src/main/jkube/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    jkube.io/scm-url: https://github.com/asi.2023/seton
    jkube.io/issue-system: Redmine
    jkube.io/issue-tracker-url: https://redmine.fic.udc.es/project/seton/issues
    jkube.io/scm-tag: head
  labels:
    app: seton
    provider: jkube
    version: 0.1-SNAPSHOT
    group: asi
  name: seton
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: seton
      provider: jkube
      group: asi
  template:
    metadata:
      annotations:
        jkube.io/scm-url: https://github.com/asi.2023/seton
        jkube.io/issue-system: Redmine
        jkube.io/issue-tracker-url: https://redmine.fic.udc.es/project/seton/issues
        jkube.io/scm-tag: head
      labels:
        app: seton
        provider: jkube
        version: 0.1-SNAPSHOT
        group: asi
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: HOSTNAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        image: github.com:5050/asi.2023/seton:latest
        imagePullPolicy: Always
        name: deploy-seton
        securityContext:
          privileged: false
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: fd-reg-cred
